--- a/minimal/minimal-quote.html
+++ b/minimal/minimal-quote.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #000000;
+            color: #ac8561;
             text-align: center;
                 max-width: 95%;
             margin: auto;
@@ -61,6 +61,20 @@ quotes=[
 "Growth takes place when you start doing stuff you are not qualified to do.",
 "Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.",
 "Twenty years from now you will be more disappointed by the things that you didn't do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.",
+"Bet on me? Bet I will.",
+"Before anything else, Preparion is the key to success.",
+"Make each day your masterpiece.",
+"We will fail when we fail to try.",
+"Don't count the days, make the days count.",
+"The plan is to fan this spark into a flame.",
+"Light tomorrow with today.",
+"Never give up on a dream just because of the time it will take to accomplish it. The time will pass anyway.",
+"Someday is not a day of the week.",
+"A year from now you may wish you started today.",
+"Believe you can and you're halfway there.",
+"Even if you're on the right track, you'll get run over if you just sit there.",
+"Never confuse a single defeat with a final defeat.",
+"Never allow a person to tell you no who doesn't have the power to say yes.",
 ];
 
 const INTERVAL = 86400000;
